My settings page overlap fix on smaller screen sizees (#499)
* Adjusted breakpoints for elements on my settings page to stop overlap issues

* formatting

--- a/frontend/client/styles/screens/settings.scss
+++ b/frontend/client/styles/screens/settings.scss
@@ -51,12 +51,14 @@
     margin-bottom: 40px;
   }
 
-  @include media('<=phone') {
-    padding: 0 8px 40px 8px;
-
+  @include media('<desktop') {
     .MuiGrid-direction-xs-column {
       align-items: center;
     }
+  }
+
+  @include media('<=phone') {
+    padding: 0 8px 40px 8px;
 
     .email-container, .lastName-container {
       align-items: center;
